--- a/ios/HomeDot/Info.plist
+++ b/ios/HomeDot/Info.plist
@@ -57,6 +57,7 @@
 		<string>RobotoMono-VariableFont_wght.ttf</string>
 		<string>RubikBubbles-Regular.ttf</string>
 		<string>Sono-VariableFont_MONO,wght.ttf</string>
+		<string>Bubbleboy-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
