--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.4.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
