--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-geocoding": "^0.5.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.4.0",
     "react-native-reanimated": "^2.14.4",
