--- a/ios/HomeDot/Info.plist
+++ b/ios/HomeDot/Info.plist
@@ -58,6 +58,7 @@
 		<string>RubikBubbles-Regular.ttf</string>
 		<string>Sono-VariableFont_MONO,wght.ttf</string>
 		<string>Bubbleboy-Regular.ttf</string>
+		<string>Poppins-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
