--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -10,6 +10,10 @@
       "sha1": "59d2f0ba7152be179faedefab35965d8cc28a94c"
     },
     {
+      "path": "src/assets/fonts/Poppins-Medium.ttf",
+      "sha1": "283f21b44efbdbf276ba802be2d949a36bbc4233"
+    },
+    {
       "path": "src/assets/fonts/RobotoMono-VariableFont_wght.ttf",
       "sha1": "4c4b222617ecdda163e01a88c191ab0a50c336cf"
     },
